language/move-lang/tests/move_check/parser/acquires_list_generic.exp
error: 

   ┌── tests/move_check/parser/acquires_list_generic.move:6:25 ───
   │
 6 │     fun foo() acquires B<CupC<R>> {
   │                         - Expected ','
   │                         ^ Unexpected '<'
   │

